# zpicotls

./: .gitignore  AGENTS.md  BUFFERS.md  CMakeLists.txt  CODEBASE.md  PKGBUILD  README.md  SECURITY.md  WindowsPort.md  plan.md  review.md
.ctags.d/: zpicotls.ctags
.github/workflows/: ci.yml
cmake/: zpicotls.pc.in
fuzz/: README.md  fuzz-asn1.c  fuzz-client-hello.c  fuzz-server-hello.c
include/: picotls.h  zpicotls.h
include/picotls/: openssl.h
include/zpicotls/: asn1.h  certificate_compression.h  fusion.h  mbedtls.h  minicrypto.h  openssl.h  ptlsbcrypt.h
lib/: asn1.c  certificate_compression.c  chacha20poly1305.h  cifra.c  ffx.c  fusion.c  hpke.c  libaegis.h  mbedtls.c  mbedtls_sign.c  minicrypto-pem.c  openssl.c  pembase64.c  picotls.c  ptlsbcrypt.c  uecc.c
lib/cifra/: aes-common.h  chacha20.c  libaegis.c  random.c  x25519.c
misc/: docker-ci.mk
picotls.xcodeproj/: project.pbxproj
picotlsvs/bcrypt-test/: bcrypt-test.c  bcrypt-test.vcxproj
picotlsvs/fusiontest/: fusiontest.vcxproj
picotlsvs/picotls/: picotls.vcxproj  picotls.vcxproj.filters
picotlsvs/picotls-bcrypt/: picotls-bcrypt.vcxproj  picotls-bcrypt.vcxproj.filters
picotlsvs/picotls-core/: picotls-core.vcxproj
picotlsvs/picotls-fusion/: picotls-fusion.vcxproj
picotlsvs/picotls-minicrypto/: picotls-minicrypto.vcxproj
picotlsvs/picotls-minicrypto-deps/: picotls-minicrypto-deps.vcxproj
picotlsvs/picotls-openssl/: picotls-openssl.vcxproj
picotlsvs/picotlsvs/: picotlsvs.c
t/: cli.c  fusion.c  hpke.c  mbedtls.c  minicrypto.c  openssl.c  picotls.c  ptlsbench.c  test.h  util.h
